# Aula9-Distribuida

./: CMakeLists.txt  clientePython.py  ex.proto  file_processor_pb2.py  file_processor_pb2_grpc.py  servidorCpp.cpp
